add condition back/fontend and fix alert modal

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -219,13 +219,13 @@
     </div>
 </div>
 <div id="alert" class="ui mini modal transition hidden" style="height: 0;">
-    <div class="ui header">
+    <div class="ui header" id="alert-header">
         เกิดข้อผิดพลาด
     </div>
-    <div class="content">
+    <div class="content" id="alert-content">
         <p></p>
     </div>
-    <div class="actions">
+    <div class="actions" id="alert-actions">
         <div class="ui green mini cancel inverted button">
             <i class="remove icon"></i> โอเค
         </div>
