fixed alert issue 'cannot click cancel'

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -225,8 +225,8 @@
     <div class="content" id="alert-content">
         <p></p>
     </div>
-    <div class="actions">
-        <div class="ui mini primary button center floated">
+    <div class="actions" id="alert-actions">
+        <div class="ui mini primary cancel button center floated">
             <i class="remove icon"></i> ปิด
         </div>
     </div>
