--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -117,7 +117,7 @@
                     <a class="item" [routerLink]="['/analysis']" routerLinkActive="active">การวิเคราะห์ข้อมูลเบื้องต้น </a>
                     <a class="item" routerLinkActive="active">รวบรวมข้อมูลเบื้องต้น </a>
                     <a class="item" routerLinkActive="active">ขออนุมัติออกตรวจสอบภาษี </a>
-                    <a class="item" routerLinkActive="active">สร้างกระดาษทำการตรวจสอบภาษี </a>
+                    <a class="item" [routerLink]="['/select-form/บริการ/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน']" routerLinkActive="active">สร้างกระดาษทำการตรวจสอบภาษี </a>
                     <a class="item" routerLinkActive="active">สรุปผลการตรวจสอบภาษี</a>
                 </div>
             </div>
