change style loading msg => 'กำังโหลด...'

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -233,8 +233,8 @@
 </div>
 
 <div class="ui main container">
-    <div class="ui active inverted dimmer" *ngIf="loading">
-        <div class="ui text loader">Loading</div>
+    <div class="ui active inverted dimmer" style="margin-top: 5em;" *ngIf="loading">
+        <div class="ui text loader">กำลังโหลด...</div>
     </div>
     <message-bar></message-bar>
     <router-outlet></router-outlet>
