--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -52,13 +52,13 @@
 
     <div class="ui center aligned grid">
       <div class="eight wide column">
-        <button class="ui mini green button" type="button" (click)="uploadData()">
+        <button class="ui mini primary button" type="button" (click)="uploadData()">
           ค้นหา
         </button>
-        <button class="ui mini red button" type="button" (click)="clearData()">
+        <button class="ui mini primary button" type="button" (click)="clearData()">
           ล้างข้อมูล
         </button>
-        <button class="ui mini green button" type="button" routerLink="/int09/1/1">
+        <button class="ui mini primary button" type="button" routerLink="/int09/1/1">
           เพิ่มข้อมูล
         </button>
 
