Commit Change CR Update

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -30,7 +30,7 @@
           </div>
           <div class="field">
             <button type="button" style="margin-left: auto" class="ui mini primary button right floated" [routerLink]="['/int02/3']">
-              <i class=" delete icon "></i>
+              <i class="delete icon"></i>
               ลบ
             </button>
           </div>
@@ -39,40 +39,59 @@
       </div>
     </div>
 
-    <div class="ui segment ">
+    <div class="ui segment">
 
-      <div class="ui grid ">
+      <div class="ui grid">
 
         <div class="sixteen wide column ">
 
-          <table id="datatable " class="ui small celled table aligned hover ">
+          <table id="datatable" class="ui small celled table aligned hover">
             <thead>
               <tr>
-                <th style="text-align: center !important ">ลำดับ</th>
-                <th style="text-align: center !important ">แบบสอบทานด้าน</th>
-                <th style="text-align: center !important ">สร้างโดย</th>
-                <th style="text-align: center !important ">แก้ไข/ลบ</th>
+                <th style="text-align: center !important">ลำดับ</th>
+                <th style="text-align: center !important">แบบสอบทานด้าน</th>
+                <th style="text-align: center !important">สร้างโดย</th>
+                <th style="text-align: center !important">Action</th>
               </tr>
             </thead>
             <tbody>
             </tbody>
           </table>
-          <div class="inline fields ">
+          <div class="inline fields">
 
 
-            <button type="button " style="margin-left: auto " class="ui mini primary button center floated ">
-              <i class="angle left icon "></i>
+            <button type="button" style="margin-left: auto" class="ui mini primary button center floated">
+              <i class="angle left icon"></i>
               กลับ
             </button>
 
 
-            <button type="button " style="margin-left: auto " class="ui mini primary button center floated ">
-              <i class="save icon "></i>
+            <button type="button" style="margin-left: auto" class="ui mini primary button center floated">
+              <i class="save icon"></i>
               ส่งแบบสอบทาน
             </button>
 
-            <div class="inline fields "></div>
+            <div class="inline fields"></div>
 
+          </div>
+
+          <div class="ui modal">
+            <i class="close icon"></i>
+            <div class="header">
+              Modal Title
+            </div>
+            <div class="image content">
+              <div class="image">
+                An image can appear on left or an icon
+              </div>
+              <div class="description">
+                A description can appear on the right
+              </div>
+            </div>
+            <div class="actions">
+              <div class="ui button">Cancel</div>
+              <div class="ui button">OK</div>
+            </div>
           </div>
 
 
