add listTravelCostHeader [Backend]

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -232,7 +232,7 @@
     </div>
 </div>
 
-<div class="ui main container">
+<div class="ui main {{loading&&'blurring'}} container">
     <div class="ui active inverted dimmer" style="margin-top: 5em;" *ngIf="loading">
         <div class="ui text loader">กำลังโหลด...</div>
     </div>
