--- a/workspace/ims-client/src/app/app.component.css
+++ b/workspace/ims-client/src/app/app.component.css
@@ -9,8 +9,8 @@
 
 .main.container {
   min-height: 100%;
-  padding-top: 6em;
-  padding-bottom: 60px;
+  padding-top: calc(6em + 10px);
+  padding-bottom: calc(60px + 10px);
   box-sizing: border-box;
 }
 
