travelCoseWsHeader 'list, list/{id}' [Frontend,Backend]

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -87,6 +87,7 @@
             <td>{{d.createdDatetime.toDateString()}}</td>
             <td>
               <button class="ui mini primary button" type="button" (click)="createLoan(d.workSheetHeaderId)">สัญญาการยืมเงิน</button>
+              <button class="ui mini orange button" type="button" (click)="editHeader(d.workSheetHeaderId)">แก้ไข</button>
             </td>
           </tr>
         </tbody>
