--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -7,7 +7,7 @@
     <div class="ui form content">
         <form ngNativeValidate (submit)="onSendModal()">
             <div class="inline fields">
-                <div class="four wide field">
+                <div class="three wide field">
                     &nbsp;
                 </div>
 
@@ -19,13 +19,13 @@
                     <label>มากกว่า</label>
                 </div>
 
-                <div class="three wide field">
-                    <input type="number" id="firstNumber" placeholder="100" [attr.required]="true" value="">
+                <div class="four wide field">
+                    <input type="number" id="firstNumber" (keyup)="onKeyUp($event, i)" placeholder="1,000,000,000" [attr.required]="true" value="">
                 </div>
             </div>
 
             <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
-                <div class="four wide field">
+                <div class="three wide field">
                     &nbsp;
                 </div>
 
@@ -33,7 +33,7 @@
                     <label>เงื่อนไขที่ {{i+2}}</label>
                 </div>
 
-                <div class="two wide field ">
+                <div class="four wide field ">
                     <input type="number" name="font{{i}}" id="font{{i}}" placeholder="?????" [attr.required]="true" [(ngModel)]="font[i]" value="">
                 </div>
 
@@ -41,7 +41,7 @@
                     <label>&nbsp;&nbsp;&nbsp;&nbsp;ถึง</label>
                 </div>
 
-                <div class="two wide field ">
+                <div class="four wide field ">
                     <input type="number" name="back{{i}}" id="back{{i}}" placeholder="?????" [attr.required]="true" [(ngModel)]="back[i]" value="">
                 </div>
 
@@ -53,7 +53,7 @@
             </div>
 
             <div class="inline fields">
-                <div class="four wide field">
+                <div class="three wide field">
                     &nbsp;
                 </div>
 
@@ -65,13 +65,13 @@
                     <label>น้อยกว่า</label>
                 </div>
 
-                <div class="three wide field ">
+                <div class="four wide field ">
                     <input type="number" id="lastNumber" placeholder="10" [attr.required]="true" value="">
                 </div>
             </div>
 
             <div class="inline fields" *ngIf="numbers.length!=3">
-                <div class="four wide field">
+                <div class="three wide field">
                     &nbsp;
                 </div>
                 <i class="plus icon"></i>
