Fix for new data

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -1,10 +1,14 @@
-<div class="ui grid">
+<div id="int02-2" class="ui grid">
+
+
+
   <div class="sixteen wide column">
     <h2 class="ui header">ตรวจสอบภายใน</h2>
 
     <div class="ui top attached header">
       <span>แบบสอบทานระบบการควบคุมภายใน</span>
     </div>
+
 
     <div class="ui attached segment">
       <div class="ui form">
@@ -74,27 +78,6 @@
             <div class="inline fields"></div>
 
           </div>
-
-          <div class="ui modal">
-            <i class="close icon"></i>
-            <div class="header">
-              Modal Title
-            </div>
-            <div class="image content">
-              <div class="image">
-                An image can appear on left or an icon
-              </div>
-              <div class="description">
-                A description can appear on the right
-              </div>
-            </div>
-            <div class="actions">
-              <div class="ui button">Cancel</div>
-              <div class="ui button">OK</div>
-            </div>
-          </div>
-
-
 
         </div>
       </div>
