--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -232,6 +232,7 @@
           <td>{{d.note}}</td>
           <td>
             <button class="ui mini red button" type="button" (click)="editData(i)">แก้ไข</button>
+            <button class="ui mini primary button" type="button" routerLink="/int09/2">สัญญาการยืมเงิน</button>
           </td>
         </tr>
       </tbody>
@@ -248,9 +249,7 @@
         <button class="ui mini primary button" type="button">
           ส่งออก
         </button>
-        <button class="ui mini primary button" type="button" routerLink="/int09/2">
-          สัญญาการยืมเงิน
-        </button>
+     
       </div>
     </div>
   </div>
