--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2.component.html
@@ -99,14 +99,14 @@
             </label>
           </div>
         </div>
-        <div class="ui nine column grid">
-          <div class="column" style="width: 18%;">
+        <div class="ui nine column grid " style="text-align: left;">
+          <div class="column" style="width: 17%;">
             <br>- ค่าเบี้ยเลี้ยง
             <br>- ค่าที่พัก
             <br>- ค่าพาหนะ
             <br>- ค่าใช้จ่ายอื่น
           </div>
-          <div class="nine wide field"></div>
+          <div class="ten wide field"></div>
           <div class="column" style="width: 20%;">
             <br> 26,220.00
             <br> 83,600.00
