fixed bugs and loading in AnalysBasicData [Frontend]

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="ui borderless menu fixed" style="background:#1e83db; ">
+<div class="ui borderless menu fixed" style="background:#1e83db;z-index: 999999;">
     <img class="logo" src="assets/images/Logo3.jpg" style="width: 250px; height: 69px; ">
     <a href="#" class="header item" style=" color:White " *ngIf="authService.getLogin()">
         {{ 'APP_NAME' | translate }}
