--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -83,9 +83,9 @@
             <td>{{d.workSheetHeaderName}}</td>
             <td>{{d.departmentName}}</td>
             <td>{{d.createdDatetime}}</td>
-            <td>
-              <button class="ui mini primary button" type="button" (click)="createLoan(d.workSheetHeaderId)">สัญญาการยืมเงิน</button>
+            <td>             
               <button class="ui mini orange button" type="button" (click)="editHeader(d.workSheetHeaderId)">แก้ไข</button>
+              <button class="ui mini orange button" type="button">ลบ</button>
             </td>
           </tr>
         </tbody>
