comfirm modal [Frontend]

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -190,19 +190,19 @@
     </div>
 </div>
 
-<div class="ui mini test modal transition hidden baiwa-confirm-modal" style="height: 0;">
+<div id="confirm" class="ui mini test modal transition hidden baiwa-confirm-modal" style="height: 0;">
     <div class="header">
-        Delete Your Account
+        การยืนยัน
     </div>
     <div class="content">
-        <p>Are you sure you want to delete your account</p>
+        <p>ต้องการลบหรือไม่?</p>
     </div>
     <div class="actions">
         <div class="ui negative button">
-            No
+            ยกเลิก
         </div>
         <div class="ui positive right labeled icon button">
-            Yes
+            ยืนยัน
             <i class="checkmark icon"></i>
         </div>
     </div>
